--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>El blog de Sarai </title>
 </head>
 <body>
-  Hola mi nombre es Sarai
+  <h1>
+    Curso esencial HTML Y CSS
+  </h1>
+  <p>
+    Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos,
+    en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
+  </p>
+  <img src="img/google _chrome.png" alt="Logo de Google Chrome" title="Logo de Google Chrome">
+  <img src="img/visual_studio_code.png" alt="Logo de Visual Studio" title="Logo de Visual Studio">
+  <img src="img/figma.png" alt="Logo de Figma" title="Logo de Figma">
+  <img src="img/github.png" alt="Logo de GitHub" title="Logo de GitHub">
 </body>
 </html>
