--- a/index-c.html
+++ b/index-c.html
@@ -5,21 +5,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="./css/style-c.css"><link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap"rel="stylesheet">
   <title>el blog de Sarai</title>
 </head>
 
 <body>
-  <div class="hero"></div>
+  <div class="principal">
+    <div class="wrapper">
+      <div class="principal-content">
+        <h1>Curso esencial de HTML y CSS</h1>
+        <p>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de
+          contenidos,
+          en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
+      </div>
+    </div>
+  </div>
   <div class="opciones">
     <div class="wrapper">
       <div class="opciones-content">
         <div class="opciones-titulo">
-          <h4>variantes del proyecto</h4>
+          <h5>variantes del proyecto</h5>
         </div>
         <div class="opciones-name">
           <a href="index.html">nemium a</a>
@@ -36,9 +43,8 @@
       <div class="header-content">
         <header>
           <nav>
-            <details open>
-              <summary>Setup</summary>
-              <ol>
+            <h5>Setup</h5>
+            <ol>
                 <a href="#google">
                   <li>Google Chrome</li>
                 </a>
@@ -51,13 +57,11 @@
                 <a href="#gt">
                   <li>GitHub</li>
                 </a>
-              </ol>
-            </details>
+            </ol>
           </nav>
           <nav>
-            <details open>
-              <summary>Conceptos esenciales del Desarrollo Web</summary>
-              <ol>
+            <h5>Conceptos esenciales del Desarrollo Web</h5>
+            <ol>
                 <a href="#html">
                   <li>Qué es HTML</li>
                 </a>
@@ -76,8 +80,7 @@
                 <a href="#css">
                   <li>Qué es CSS</li>
                 </a>
-              </ol>
-            </details>
+            </ol>
           </nav>
         </header>
       </div>
@@ -86,23 +89,21 @@
   <main class="main">
     <div class="wrapper">
       <div class="main-content">
-        <h1>Curso esencial de HTML y CSS</h1>
-        <p>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de
-          contenidos,
-          en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
         <hr>
         <section class="section-content-1">
           <h2>Setup</h2>
           <img src="./img/googl-chrome-b.png" alt="Logo de Google Chrome" title="Logo de Google Chrome">
           <h3 id="google">Google Chrome</h3>
-          <p>Chrome va a ser <span>el navegador que utilizaremos en el curso</span> por su extenso soporte de nuevos estándares y
+          <p>Chrome va a ser <span>el navegador que utilizaremos en el curso</span> por su extenso soporte de nuevos estándares
+            y
             herramientas de
             desarrollo avanzadas y de amigable uso.</p>
           <img src="./img/visual-studio-code-b.png" alt="Logo de Visual Code Studio" title="Logo de Visual Code Studio">
           <h3 id="vsc">Visual Code Studio</h3>
           <p>Visual Studio Code es el <span>editor de texto más popular y potente del mercado actualmente</span>, su fácil uso y
             la capacidad de
-            extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
+            extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje
+            en
             el que se desemvuelva.</p>
           <img src="./img/figma-b.png" alt="Logo de Figma" title="Logo de Figma">
           <h3 id="figma">Figma</h3>
@@ -110,7 +111,8 @@
             su implementación por su <span>fácil uso</span> porque puede ser usado directamente desde el navegador.</p>
           <img src="./img/github-b.png" alt="Logo de GitHub" title="Logo de GitHub">
           <h3 id="gt">GitHub</h3>
-          <p>Así como en Facebook <span>te encuentran tus amigos, en Github te encuentran otras programadoras y programadores</span>
+          <p>Así como en Facebook <span>te encuentran tus amigos, en Github te encuentran otras programadoras y
+              programadores</span>
             de todo el
             mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o
             guardarlo de
@@ -124,7 +126,7 @@
         </blockquote>
         <section class="section-content-2">
           <h2>Conceptos esenciales del Desarrollo Web</h2>
-          <h3 id="html">Qué es HTML</h3>
+          <h3 id="html">HTML</h3>
           <p>Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define
             el significado
             y la estructura del contenido.</p>
@@ -242,8 +244,7 @@
             </div>
           </div>
         </section>
-        <p>Si tienes alguna pregunta escríbeme a <a
-            href="mailto:atochepascual.saraichristina@gmail.com">me@saraipascual.com</a></p>
+        <p>Si tienes alguna pregunta escríbeme a <a href="mailto:atochepascual.saraichristina@gmail.com">me@saraipascual.com</a></p>
         <section class="section-content-5">
           <h3>Suscríbete a nuestro newsletter</h3>
           <form class="form">
@@ -256,22 +257,17 @@
     </div>
   </main>
   <footer class="footer">
-    <!-- <div class="wrapper"> -->
-    <div class="footer-content">
-      <h2>© Sarai Atoche 2021</h2>
-      <div class="redes">
-        <a href="https://instagram.com/chris.ap03?igshid=YmMyMTA2M2Y=" target="_blank">
-          <img src="./img/instagram-w.png" alt="Logo de Instagram" title="Logo de Instagram">
-        </a>
-        <a href="https://www.facebook.com/sarai.atochepascual" target="_blank">
-          <img src="./img/facebook-w.png" alt="Logo de Facebook" title="Logo de Facebook">
-        </a>
-        <a href="">
-          <img src="./img/twiter-w.png" alt="Logo de Twiter" title="Logo deTwiter">
-        </a>
-      </div>
+    <div class="redes">
+      <a href="https://instagram.com/chris.ap03?igshid=YmMyMTA2M2Y=" target="_blank">
+        <img src="./img/instagram-w.png" alt="Logo de Instagram" title="Logo de Instagram">
+      </a>
+      <a href="https://www.facebook.com/sarai.atochepascual" target="_blank">
+        <img src="./img/facebook-w.png" alt="Logo de Facebook" title="Logo de Facebook">
+      </a>
+      <a href="">
+        <img src="./img/twiter-w.png" alt="Logo de Twiter" title="Logo deTwiter">
+      </a>
     </div>
-    <!-- </div> -->
   </footer>
 </body>
 
