--- a/index-d.html
+++ b/index-d.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style-d.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:wght@400;700&display=swap"
     rel="stylesheet">
   <title>el blog de Sarai</title>
 </head>
@@ -55,7 +55,7 @@
             </details>
           </nav>
           <nav>
-            <details open>
+            <details>
               <summary>Conceptos esenciales del Desarrollo Web</summary>
               <ol>
                 <a href="#html">
@@ -100,7 +100,7 @@
             desarrollo avanzadas y de amigable uso.</p>
           <img src="./img/visual-studio-code-b.png" alt="Logo de Visual Code Studio" title="Logo de Visual Code Studio">
           <h3 id="vsc">Visual Code Studio</h3>
-          <p>Visual Studio Code es el <span>editor de texto más popular y potente del mercado actualmente</span>, su fácil uso y
+          <p>Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y
             la capacidad de
             extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
             el que se desemvuelva.</p>
@@ -110,7 +110,7 @@
             su implementación por su <span>fácil uso</span> porque puede ser usado directamente desde el navegador.</p>
           <img src="./img/github-b.png" alt="Logo de GitHub" title="Logo de GitHub">
           <h3 id="gt">GitHub</h3>
-          <p>Así como en Facebook <span>te encuentran tus amigos, en Github te encuentran otras programadoras y programadores</span>
+          <p>Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores
             de todo el
             mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o
             guardarlo de
@@ -182,76 +182,78 @@
             la presentación de documentos HTML</p>
           <img src="./img/img-css.png" alt="css" title="css">
         </section>
-        <section class="section-content-3">
-          <h2>Modelo de caja</h2>
-          <h3>El modelo de caja está compuesto por:</h3>
-          <p>Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y
-            herramientas de
-            desarrollo avanzadas y de amigable uso.</p>
-          <ol>
-            <li>Tamaño del del contenido / ancho y alto</li>
-            <li>Padding / Relleno</li>
-            <li>Border / Bordes</li>
-            <li>Margin / Márgenes</li>
-          </ol>
-          <h3>Propiedades físicas para el modelo de caja:</h3>
-          <ul>
-            <li>width / height</li>
-            <li>margin / margin-top | margin-right | margin-bottom | margin-left</li>
-            <li>border / border-top | border-right | border-bottom | border-left</li>
-            <li>padding / padding-top | padding-right | padding-bottom | padding-left</li>
-          </ul>
-          <h3>Propiedades lógicas para el modelo de caja:</h3>
-          <ul>
-            <li>inline-size / block-size</li>
-            <li>margin-block | margin-inline | margin-block-start | margin-block-end | margin-inline-start |
-              margin-inline-end</li>
-            <li>border-block | border-inline | border-block-start | border-block-end | border-inline-start |
-              border-inline-end</li>
-            <li>padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start |
-              padding-inline-end</li>
-          </ul>
-          <h3>Modelo de caja</h3>
-        </section>
-        <section class="section-content-4">
+        <div class="left">
+          <section class="section-content-3">
+            <h2>Modelo de caja</h2>
+            <h3>El modelo de caja está compuesto por:</h3>
+            <p>Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y
+              herramientas de
+              desarrollo avanzadas y de amigable uso.</p>
+            <ol>
+              <li>Tamaño del del contenido / ancho y alto</li>
+              <li>Padding / Relleno</li>
+              <li>Border / Bordes</li>
+              <li>Margin / Márgenes</li>
+            </ol>
+            <h3>Propiedades físicas para el modelo de caja:</h3>
+            <ul>
+              <li>width / height</li>
+              <li>margin / margin-top | margin-right | margin-bottom | margin-left</li>
+              <li>border / border-top | border-right | border-bottom | border-left</li>
+              <li>padding / padding-top | padding-right | padding-bottom | padding-left</li>
+            </ul>
+            <h3>Propiedades lógicas para el modelo de caja:</h3>
+            <ul>
+              <li>inline-size / block-size</li>
+              <li>margin-block | margin-inline | margin-block-start | margin-block-end | margin-inline-start |
+                margin-inline-end</li>
+              <li>border-block | border-inline | border-block-start | border-block-end | border-inline-start |
+                border-inline-end</li>
+              <li>padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start |
+                padding-inline-end</li>
+            </ul>
+            <h3>Modelo de caja</h3>
+          </section>
           <div class="slider">
-            <scroll-container class="slider-container">
-              <scroll-page class="slider-slide" id="video-1">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
-                  title="YouTube video player" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen></iframe>
-              </scroll-page>
-              <scroll-page class="slider-slide" id="video-2">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
-                  title="YouTube video player" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen></iframe>
-              </scroll-page>
-              <scroll-page class="slider-slide" id="video-3">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
-                  title="YouTube video player" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen></iframe>
-              </scroll-page>
-            </scroll-container>
-            <div class="slider-bullet-list">
-              <a href="#video-1" class="slider-bullet"></a>
-              <a href="#video-2" class="slider-bullet"></a>
-              <a href="#video-3" class="slider-bullet"></a>
+          <section class="section-content-4">
+              <scroll-container class="slider-container">
+                <scroll-page class="slider-slide" id="video-1">
+                  <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </scroll-page>
+                <scroll-page class="slider-slide" id="video-2">
+                  <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </scroll-page>
+                <scroll-page class="slider-slide" id="video-3">
+                  <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </scroll-page>
+              </scroll-container>
+              <div class="slider-bullet-list">
+                <a href="#video-1" class="slider-bullet"></a>
+                <a href="#video-2" class="slider-bullet"></a>
+                <a href="#video-3" class="slider-bullet"></a>
+              </div>
             </div>
-          </div>
-        </section>
-        <p>Si tienes alguna pregunta escríbeme a <a
-            href="mailto:atochepascual.saraichristina@gmail.com">me@saraipascual.com</a></p>
-        <section class="section-content-5">
-          <h3>Suscríbete a nuestro newsletter</h3>
-          <form class="form">
-            <input type="text" required placeholder="Nombre">
-            <input type="email" required placeholder="Correo electronico">
-            <input type="submit" value="Suscribirme">
-          </form>
-        </section>
+          </section>
+          <p>Si tienes alguna pregunta escríbeme a <a
+              href="mailto:atochepascual.saraichristina@gmail.com">me@saraipascual.com</a></p>
+          <section class="section-content-5">
+            <h3>Suscríbete a nuestro newsletter</h3>
+            <form class="form">
+              <input type="text" required placeholder="Nombre">
+              <input type="email" required placeholder="Correo electronico">
+              <input type="submit" value="Suscribirme">
+            </form>
+          </section>
+        </div>
       </div>
     </div>
   </main>
