--- a/index-e.html
+++ b/index-e.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style-e.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Nunito:wght@400;700&family=Roboto:wght@400;500&display=swap"
     rel="stylesheet">
   <title>el blog de Sarai</title>
 </head>
@@ -55,7 +55,7 @@
             </details>
           </nav>
           <nav>
-            <details open>
+            <details>
               <summary>Conceptos esenciales del Desarrollo Web</summary>
               <ol>
                 <a href="#html">
@@ -93,22 +93,22 @@
         <hr>
         <section class="section-content-1">
           <h2>Setup</h2>
-          <img src="./img/googl-chrome-b.png" alt="Logo de Google Chrome" title="Logo de Google Chrome">
+          <img src="./img/google-chrome-w.png" alt="Logo de Google Chrome" title="Logo de Google Chrome">
           <h3 id="google">Google Chrome</h3>
           <p>Chrome va a ser <span>el navegador que utilizaremos en el curso</span> por su extenso soporte de nuevos estándares y
             herramientas de
             desarrollo avanzadas y de amigable uso.</p>
-          <img src="./img/visual-studio-code-b.png" alt="Logo de Visual Code Studio" title="Logo de Visual Code Studio">
+          <img src="./img/visual-studio-code-w.png" alt="Logo de Visual Code Studio" title="Logo de Visual Code Studio">
           <h3 id="vsc">Visual Code Studio</h3>
           <p>Visual Studio Code es el <span>editor de texto más popular y potente del mercado actualmente</span>, su fácil uso y
             la capacidad de
             extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
             el que se desemvuelva.</p>
-          <img src="./img/figma-b.png" alt="Logo de Figma" title="Logo de Figma">
+          <img src="./img/figma-w.png" alt="Logo de Figma" title="Logo de Figma">
           <h3 id="figma">Figma</h3>
           <p>Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para
             su implementación por su <span>fácil uso</span> porque puede ser usado directamente desde el navegador.</p>
-          <img src="./img/github-b.png" alt="Logo de GitHub" title="Logo de GitHub">
+          <img src="./img/github-w.png" alt="Logo de GitHub" title="Logo de GitHub">
           <h3 id="gt">GitHub</h3>
           <p>Así como en Facebook <span>te encuentran tus amigos, en Github te encuentran otras programadoras y programadores</span>
             de todo el
@@ -124,7 +124,7 @@
         </blockquote>
         <section class="section-content-2">
           <h2>Conceptos esenciales del Desarrollo Web</h2>
-          <h3 id="html">Qué es HTML</h3>
+          <h3 id="html">HTML</h3>
           <p>Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define
             el significado
             y la estructura del contenido.</p>
@@ -183,8 +183,8 @@
           <img src="./img/img-css.png" alt="css" title="css">
         </section>
         <section class="section-content-3">
-          <h2>Modelo de caja</h2>
-          <h3>El modelo de caja está compuesto por:</h3>
+          <h3>Modelo de caja</h3>
+          <h4>El modelo de caja está compuesto por:</h4>
           <p>Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y
             herramientas de
             desarrollo avanzadas y de amigable uso.</p>
@@ -211,7 +211,7 @@
             <li>padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start |
               padding-inline-end</li>
           </ul>
-          <h3>Modelo de caja</h3>
+          <h4>Modelo de caja</h4>
         </section>
         <section class="section-content-4">
           <div class="slider">
@@ -245,7 +245,7 @@
         <p>Si tienes alguna pregunta escríbeme a <a
             href="mailto:atochepascual.saraichristina@gmail.com">me@saraipascual.com</a></p>
         <section class="section-content-5">
-          <h3>Suscríbete a nuestro newsletter</h3>
+          <h4>Suscríbete a nuestro newsletter</h4>
           <form class="form">
             <input type="text" required placeholder="Nombre">
             <input type="email" required placeholder="Correo electronico">
@@ -258,16 +258,16 @@
   <footer class="footer">
     <!-- <div class="wrapper"> -->
     <div class="footer-content">
-      <h2>© Sarai Atoche 2021</h2>
+      <h3>© Sarai Atoche 2021</h3>
       <div class="redes">
         <a href="https://instagram.com/chris.ap03?igshid=YmMyMTA2M2Y=" target="_blank">
-          <img src="./img/instagram-w.png" alt="Logo de Instagram" title="Logo de Instagram">
+          <img src="./img/instagram-blue.png" alt="Logo de Instagram" title="Logo de Instagram">
         </a>
         <a href="https://www.facebook.com/sarai.atochepascual" target="_blank">
-          <img src="./img/facebook-w.png" alt="Logo de Facebook" title="Logo de Facebook">
+          <img src="./img/facebook-blue.png" alt="Logo de Facebook" title="Logo de Facebook">
         </a>
         <a href="">
-          <img src="./img/twiter-w.png" alt="Logo de Twiter" title="Logo deTwiter">
+          <img src="./img/twiter-blue.png" alt="Logo de Twiter" title="Logo deTwiter">
         </a>
       </div>
     </div>
