--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
+  <meta property="og:title" content="Mi proyecto del Curso esencial de HTML y CSS" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Todo lo que necesitas saber en tu dia a dia como Frontend" />
+  <meta property="og:url" content="https://chrisdev03.github.io/curso-esencial-html-css/" />
+  <meta property="og:image" content="https://chrisdev03.github.io/curso-esencial-html-css/img/dom.png" />
   <title>el blog de Sarai</title>
 </head>
 
