--- a/index-b.html
+++ b/index-b.html
@@ -273,16 +273,19 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="redes">
-      <a href="https://instagram.com/chris.ap03?igshid=YmMyMTA2M2Y=" target="_blank">
-        <img src="./img/instagram-w.png" alt="Logo de Instagram" title="Logo de Instagram">
-      </a>
-      <a href="https://www.facebook.com/sarai.atochepascual" target="_blank">
-        <img src="./img/facebook-w.png" alt="Logo de Facebook" title="Logo de Facebook">
-      </a>
-      <a href="">
-        <img src="./img/twiter-w.png" alt="Logo de Twiter" title="Logo deTwiter">
-      </a>
+    <div class="footer-content">
+      <h2>© Sarai Atoche 2021</h2>
+      <div class="redes">
+        <a href="https://instagram.com/chris.ap03?igshid=YmMyMTA2M2Y=" target="_blank">
+          <img src="./img/instagram-b.png" alt="Logo de Instagram" title="Logo de Instagram">
+        </a>
+        <a href="https://www.facebook.com/sarai.atochepascual" target="_blank">
+          <img src="./img/facebook-b.png" alt="Logo de Facebook" title="Logo de Facebook">
+        </a>
+        <a href="">
+          <img src="./img/twiter-b.png" alt="Logo de Twiter" title="Logo deTwiter">
+        </a>
+      </div>
     </div>
   </footer>
 </body>
